--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "globals": "^16.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "sass-embedded": "^1.89.2"
   },
   "packageManager": "pnpm@10.14.0"
 }
