--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -28,13 +28,13 @@
     "@vitejs/plugin-react": "^4.7.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.89.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6",
-    "sass-embedded": "^1.89.2"
+    "vite": "^7.0.6"
   },
   "packageManager": "pnpm@10.14.0"
 }
