--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "serve": "./pocketbase/pocketbase serve --http='0.0.0.0:8090'",
+    "serve": "./pocketbase/pocketbase.exe serve --http='0.0.0.0:8090'",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.130.12",
-    "material-symbols": "^0.33.0",
+    "@tanstack/react-router": "^1.131.49",
+    "material-symbols": "^0.35.2",
     "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@tanstack/router-devtools": "^1.130.13",
-    "@tanstack/router-plugin": "^1.130.15",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "babel-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint": "^9.32.0",
+    "@eslint/js": "^9.36.0",
+    "@tanstack/router-devtools": "^1.131.49",
+    "@tanstack/router-plugin": "^1.131.49",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "sass-embedded": "^1.89.2",
+    "globals": "^16.4.0",
+    "sass-embedded": "^1.93.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6"
+    "typescript-eslint": "^8.44.0",
+    "vite": "^7.1.6"
   },
   "packageManager": "pnpm@10.14.0"
 }
