--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-router": "^1.131.49",
+    "@tanstack/react-router-devtools": "^1.131.49",
     "material-symbols": "^0.35.2",
     "pocketbase": "^0.26.2",
     "react": "^19.1.1",
@@ -28,6 +29,8 @@
     "@vitejs/plugin-react": "^5.0.3",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
