--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
     "visualise": "pnpm dlx vite-bundle-visualizer -c vite.config.ts"
   },
   "dependencies": {
-    "material-symbols": "^0.35.2",
-    "pocketbase": "^0.26.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "material-symbols": "^0.38.0",
+    "pocketbase": "^0.26.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "wouter": "^3.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
+    "@eslint/js": "^9.38.0",
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint-plugin-react-hooks": "6.0.0-rc.1",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
-    "sass-embedded": "^1.93.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.6"
+    "sass-embedded": "^1.93.2",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.12"
   },
   "packageManager": "pnpm@10.18.2"
 }
