--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "pnpm run build && firebase deploy",
     "visualise": "pnpm dlx vite-bundle-visualizer -c vite.config.ts"
   },
   "dependencies": {
