--- a/package.json
+++ b/package.json
@@ -7,36 +7,43 @@
     "dev": "vite --host",
     "serve": "./pocketbase/pocketbase.exe serve --http='0.0.0.0:8090'",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "preview": "vite preview",
     "deploy": "pnpm run build && firebase deploy",
     "visualise": "pnpm dlx vite-bundle-visualizer -c vite.config.ts"
   },
   "dependencies": {
-    "material-symbols": "^0.38.0",
-    "pocketbase": "^0.26.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "wouter": "^3.7.1",
-    "zustand": "^5.0.8"
+    "material-symbols": "^0.40.2",
+    "pocketbase": "^0.26.8",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "wouter": "^3.9.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
+    "@eslint-react/eslint-plugin": "^2.11.0",
+    "@eslint/js": "^9.39.2",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^25.2.1",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@vitejs/plugin-react": "^5.1.3",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.4.0",
-    "sass-embedded": "^1.93.2",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "sass-embedded": "^1.97.3",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.2",
-    "vite": "^7.1.12"
+    "typescript-eslint": "^8.54.0",
+    "vite": "^7.3.1",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "packageManager": "pnpm@10.18.2"
 }
