--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "serve": "./pocketbase/pocketbase.exe serve --http='0.0.0.0:8090'",
     "build": "tsc -b && vite build",
     "lint": "eslint . --fix",
     "preview": "vite preview",
@@ -13,8 +12,8 @@
     "visualise": "pnpm dlx vite-bundle-visualizer -c vite.config.ts"
   },
   "dependencies": {
+    "firebase": "^12.9.0",
     "material-symbols": "^0.40.2",
-    "pocketbase": "^0.26.8",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "wouter": "^3.9.0",
